Change Logo Width

--- a/index.html
+++ b/index.html
@@ -608,8 +608,7 @@ Message </textarea
                                             aria-hidden="true"
                                         ></i
                                     ></a>
-                                    Address : Lorem Ipsum <br />
-                                    is simply dummy
+                                    Address: California, Los Angeles
                                 </li>
                                 <li>
                                     <a href="#"
@@ -617,7 +616,7 @@ Message </textarea
                                             class="fa fa-volume-control-phone"
                                             aria-hidden="true"
                                         ></i></a
-                                    >Phone : +(1234) 567 890
+                                    >Phone : +1(234)657-789
                                 </li>
                                 <li>
                                     <a href="#"
@@ -625,7 +624,7 @@ Message </textarea
                                             class="fa fa-envelope"
                                             aria-hidden="true"
                                         ></i></a
-                                    >Email : demo@gmail.com
+                                    >Email : info@NashtaConstruction.com
                                 </li>
                             </ul>
                             <form class="bottom_form">
@@ -653,10 +652,10 @@ Message </textarea
                         <div class="row">
                             <div class="col-md-12">
                                 <p>
-                                    Copyright 2019 All Right Reserved By<a
-                                        href="https://html.design/"
+                                    Copyright 2024 All Right Reserved By<a
+                                        href="https://NashtaConstruction.com/"
                                     >
-                                        Free html Templates</a
+                                        Nashta Construction</a
                                     >
                                 </p>
                             </div>
